--- a/index.html
+++ b/index.html
@@ -518,6 +518,127 @@ html { scroll-padding-top: 80px; }
   font-size: 16px;
 }
 
+
+/* --- Обновлённая адаптивная сетка для галереи --- */
+.gallery,
+.gallery-hover {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  gap: 12px;
+}
+
+@media (max-width: 720px) {
+  .gallery,
+  .gallery-hover {
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    gap: 10px;
+  }
+  .gallery img,
+  .gallery-hover img {
+    height: 160px;
+  }
+}
+
+@media (max-width: 480px) {
+  .gallery,
+  .gallery-hover {
+    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+    gap: 8px;
+  }
+  .gallery img,
+  .gallery-hover img {
+    height: 140px;
+  }
+}
+
+
+/* --- Улучшенное отображение миниатюр на ПК и адаптивная сетка --- */
+.gallery,
+.gallery-hover {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 20px;
+  margin-top: 24px;
+}
+
+.gallery-hover figure {
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.gallery-hover figure:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.12);
+}
+
+.gallery-hover img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  transition: transform 0.4s ease, filter 0.4s ease;
+}
+
+.gallery-hover figure:hover img {
+  transform: scale(1.05);
+  filter: brightness(0.9);
+}
+
+.gallery-hover figcaption {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  font-size: 14px;
+  padding: 8px 10px;
+  opacity: 0;
+  transform: translateY(100%);
+  transition: all 0.4s ease;
+}
+
+.gallery-hover figure:hover figcaption {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* --- Адаптивность --- */
+@media (max-width: 1024px) {
+  .gallery,
+  .gallery-hover {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 16px;
+  }
+  .gallery-hover img {
+    height: 180px;
+  }
+}
+
+@media (max-width: 720px) {
+  .gallery,
+  .gallery-hover {
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    gap: 12px;
+  }
+  .gallery-hover img {
+    height: 160px;
+  }
+}
+
+@media (max-width: 480px) {
+  .gallery,
+  .gallery-hover {
+    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+    gap: 10px;
+  }
+  .gallery-hover img {
+    height: 140px;
+  }
+}
+
 </style>
 
 </head>
