--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width,initial-scale=1" name="viewport"/>
-<meta content="Профессиональный монтаж оптоволоконных линий связи. Бесплатный выезд, работы любой сложности 24/7" name="description"/>
-<title>Монтаж оптоволоконных сетей — Кузница Связи</title>
 <style>
+
 html { scroll-padding-top: 80px; }
 
   :root{
@@ -519,127 +516,200 @@ html { scroll-padding-top: 80px; }
 }
 
 
-/* --- Обновлённая адаптивная сетка для галереи --- */
-.gallery,
-.gallery-hover {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-  gap: 12px;
-}
 
-@media (max-width: 720px) {
-  .gallery,
-  .gallery-hover {
-    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-    gap: 10px;
+
+    .partners-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 30px;
+      align-items: center;
+      justify-items: center;
+      margin-top: 30px;
+    }
+    .partners-grid img {
+      max-height: 70px;
+      width: auto;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
+    }
+    .partners-grid img:hover {
+      transform: scale(1.08);
+      box-shadow: 0 4px 16px rgba(0,0,0,0.15);
+    }
+    .lightbox {
+      display: 
+      position: fixed;
+      z-index: 10000;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.9);
+      justify-content: center;
+      align-items: center;
+    }
+    .lightbox img {
+      max-width: 80%;
+      max-height: 80%;
+    }
+    .lightbox.active {
+      display: flex;
+    }
+    .lightbox-arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 48px;
+      color: white;
+      cursor: pointer;
+      user-select: none;
+      padding: 20px;
+    }
+    .lightbox-arrow.left { left: 20px; }
+    .lightbox-arrow.right { right: 20px; }
+    .lightbox-close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 36px;
+      color: white;
+      cursor: pointer;
+    }
+  
+
+
+    .partners-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      gap: 30px;
+      align-items: center;
+      justify-items: center;
+      margin-top: 30px;
+    }
+    .partners-grid img {
+      max-height: 70px;
+      width: auto;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
+    }
+    .partners-grid img:hover {
+      transform: scale(1.08);
+      box-shadow: 0 4px 16px rgba(0,0,0,0.15);
+    }
+    .lightbox {
+      display: none;
+      position: fixed;
+      z-index: 10000;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.9);
+      justify-content: center;
+      align-items: center;
+    }
+    .lightbox img {
+      max-width: 80%;
+      max-height: 80%;
+    }
+    .lightbox.active {
+      display: flex;
+    }
+    .lightbox-arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 48px;
+      color: white;
+      cursor: pointer;
+      user-select: none;
+      padding: 20px;
+    }
+    .lightbox-arrow.left { left: 20px; }
+    .lightbox-arrow.right { right: 20px; }
+    .lightbox-close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 36px;
+      color: white;
+      cursor: pointer;
+    }
+  
+
+
+    .partners-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 24px;
+      align-items: center;
+      justify-items: center;
+      margin-top: 24px;
+      background: transparent;
+    }
+    .partners-grid img {
+      max-height: 60px;
+      width: auto;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      filter: brightness(1);
+    }
+    .partners-grid img:hover {
+      transform: scale(1.08);
+      box-shadow: 0 4px 14px rgba(0,0,0,0.1);
+    }
+    @media(max-width:600px){
+      .partners-grid img{max-height:48px;}
+    }
+  
+
+
+  .lightbox {
+    display: none;
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.9);
+    justify-content: center;
+    align-items: center;
   }
-  .gallery img,
-  .gallery-hover img {
-    height: 160px;
+  .lightbox.active { display: flex; }
+  .lightbox img {
+    max-width: 80%;
+    max-height: 80%;
+    object-fit: contain;
+    border-radius: 6px;
   }
-}
-
-@media (max-width: 480px) {
-  .gallery,
-  .gallery-hover {
-    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-    gap: 8px;
+  .lightbox-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 48px;
+    color: white;
+    cursor: pointer;
+    user-select: none;
+    padding: 20px;
   }
-  .gallery img,
-  .gallery-hover img {
-    height: 140px;
+  .lightbox-arrow.left { left: 20px; }
+  .lightbox-arrow.right { right: 20px; }
+  .lightbox-close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-size: 36px;
+    color: white;
+    cursor: pointer;
   }
-}
-
-
-/* --- Улучшенное отображение миниатюр на ПК и адаптивная сетка --- */
-.gallery,
-.gallery-hover {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  gap: 20px;
-  margin-top: 24px;
-}
-
-.gallery-hover figure {
-  position: relative;
-  overflow: hidden;
-  border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.gallery-hover figure:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.12);
-}
-
-.gallery-hover img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  transition: transform 0.4s ease, filter 0.4s ease;
-}
-
-.gallery-hover figure:hover img {
-  transform: scale(1.05);
-  filter: brightness(0.9);
-}
-
-.gallery-hover figcaption {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.6);
-  color: #fff;
-  font-size: 14px;
-  padding: 8px 10px;
-  opacity: 0;
-  transform: translateY(100%);
-  transition: all 0.4s ease;
-}
-
-.gallery-hover figure:hover figcaption {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-/* --- Адаптивность --- */
-@media (max-width: 1024px) {
-  .gallery,
-  .gallery-hover {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 16px;
-  }
-  .gallery-hover img {
-    height: 180px;
-  }
-}
-
-@media (max-width: 720px) {
-  .gallery,
-  .gallery-hover {
-    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-    gap: 12px;
-  }
-  .gallery-hover img {
-    height: 160px;
-  }
-}
-
-@media (max-width: 480px) {
-  .gallery,
-  .gallery-hover {
-    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-    gap: 10px;
-  }
-  .gallery-hover img {
-    height: 140px;
-  }
-}
 
 </style>
+
+<meta charset="utf-8"/>
+<meta content="width=device-width,initial-scale=1" name="viewport"/>
+<meta content="Профессиональный монтаж оптоволоконных линий связи. Бесплатный выезд, работы любой сложности 24/7" name="description"/>
+<title>Монтаж оптоволоконных сетей — Кузница Связи</title>
+
 
 </head>
 <body>
@@ -966,6 +1036,7 @@ html { scroll-padding-top: 80px; }
 </figure>
 </div>
 </section>
+
 <section id="aerial-crossings">
   <div class="container">
     <h3>Организация воздушных пролетов между зданиями</h3>
